--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,10 @@
     "manifest_version": 3,
     "name": "Smart Search Router",
     "description": "Use 'x' + query to route questions to Perplexity, keywords to Google.",
-    "version": "1.0",
+    "version": "1.1",
     "author": "Lev Jampolsky",
     "homepage_url": "https://x.com/LevJampolsky",
-    "permissions": ["tabs"],
+    "permissions": ["tabs", "storage"],
     "host_permissions": [
       "https://ipapi.co/*"
     ],
@@ -15,10 +15,12 @@
     "background": {
       "service_worker": "background.js"
     },
+    "action": {
+      "default_popup": "popup.html"
+    },
     "icons": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
   }
-  
