--- a/wrangler.toml
+++ b/wrangler.toml
@@ -2,9 +2,8 @@ name = "smartsearch"
 main = "src/worker.js"
 compatibility_date = "2024-04-20"
 
-[site]
-bucket = "./assets"
+# Disable logging by not defining any log settings
+# Disable analytics by not defining any datasets
 
-[site.mounts]
-source = "./assets"
-destination = "" 
+[site]
+bucket = "./assets" 
