--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,5 +5,10 @@ compatibility_date = "2024-04-20"
 # Disable logging by not defining any log settings
 # Disable analytics by not defining any datasets
 
+# KV Namespace for rate limiting
+kv_namespaces = [
+  { binding = "RATE_LIMITS", id = "0be9819908b244c780e58f8a4999dd72" }
+]
+
 [site]
 bucket = "./assets" 
