--- a/.gitignore
+++ b/.gitignore
@@ -2,21 +2,5 @@
 node_modules/
 .wrangler/
 
-# Build outputs
-dist/
-build/
-
-# Environment files
-.env
-.env.local
-.env.*.local
-
-# IDE and editor files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS files
-.DS_Store
-Thumbs.db 
+# Release files
+release/
